# ask-me

./: .gitignore  pyproject.toml
auth/: auth-appendix-a.py  auth-v1.0.py  auth-v1.5.py  auth-v2.0-rainbow.py  auth-v2.0.py  auth-v2.5.py  auth-v3.py  auth-v4.py  auth-v5.py  auth-v6.py  auth-v7.py  auth-v8.py
auth/teaching/: auth-v1.0.py
latest/: app.py  data.sqlite
latest/static/: style.css
latest/templates/: base.html  index.html  message_detail.html
teaching/: app-2024-11-23.py  app-2024-11-30-v1.py  app-2024-11-30-v2.py  app-live.py  idle.html  test.html  user_dict.json  user_dict.txt  user_dict_v1.txt
teaching/templates/: index-v2.html  index.html  user_detail-v2.html  user_detail.html
