[project]
name = "2024-ask-me"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "flask-wtf>=1.2.2",
    "python-dotenv>=1.0.1",
    "flask-jwt-extended>=4.7.1",
    "requests>=2.32.3",
]
